--- a/PS3/README
+++ b/PS3/README
@@ -1,1 +1,2 @@
-For this problem, I kept getting an error with the tkinter lib. I spent almost two days trying to fix this, but I could not in the end. Problem 5&6 are not complete
+For this problem, I kept getting an error with the tkinter lib. 
+I spent hours debugging, but I could not find out what is wrong with it. Problem 5 and 6 are not complete.
